<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Emoji Mood Tracker</string>
    <string name="settings">Settings</string>
    <string name="action_notify_update_mood">du.weber.cs.w01113559.emojimoodtracker.action.notify_update_mood</string>

    <!-- Authentication Strings -->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="login">Login</string>
    <string name="new_here">New Here?&#160;</string>
    <string name="create_account">Create Account</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already have an account?&#160;</string>

    <!-- ToDo: Remove all Unused Preference Strings -->
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="graph_button">Graph Button</string>
    <string name="sign_out">Sign Out</string>
    <string name="def_web_client" tools:ignore="TypographyDashes">169942334159-8k1u1ckgng0g6s4tltbf84bnvlmomaua.apps.googleusercontent.com</string>
    <string name="or_login_with">Or login with…</string>
    <string name="channel_reminder_1" tools:ignore="Typos">channel_reminder_1</string>
    <string name="channel_1_name">Update Mood Reminder</string>
    <string name="channel_1_description">Notifications to remind you to update your mood</string>
    <string name="notification_1_Title">Don\'t forget to…</string>
    <string name="notification_1_Text">Update your mood!</string>
    <string name="tvDateRangePicker_default">[Start Date] - [End Date]</string>
    <string name="customize_emojis">Customize Emojis</string>
    <string name="notifications">Notifications</string>
    <string name="enable_notification_reminders">Enable Notification Reminders</string>
    <string name="schedule_reminder">Schedule Reminder</string>
    <string name="data">Data</string>
    <string name="manage_notifications">Manage Notifications</string>
    <string name="remove_reminder">Remove Reminder</string>
    <string name="customization">Customization</string>
</resources>