<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/customization">

        <MultiSelectListPreference
            app:icon="@drawable/ic_baseline_customize_emojis_24"
            app:key="Emojis"
            app:title="@string/customize_emojis"
            app:entries="@array/emoji_unicode"
            app:entryValues="@array/emoji_hex_codes"
            app:defaultValue="@array/default_emojis" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/notifications">

        <SwitchPreferenceCompat
            app:icon="@drawable/ic_baseline_notifications_paused_24"
            app:key="notificationSwitch"
            app:defaultValue="false"
            app:enabled="false"
            app:summary="Coming Soon...."
            app:title="@string/enable_notification_reminders" />

        <Preference
            app:dependency="notificationSwitch"
            app:icon="@drawable/ic_baseline_edit_notifications_24"
            app:key="manageNotifications"
            app:summary="@string/notification_settings_summary"
            app:title="@string/manage_notifications" />

        <Preference
            app:fragment="edu.weber.cs.w01113559.emojimoodtracker.Settings.AddReminderDialogFragment"
            app:dependency="notificationSwitch"
            app:icon="@drawable/ic_baseline_notification_add_24"
            app:key="scheduleNotification"
            app:isPreferenceVisible="false"
            app:title="@string/schedule_reminder" >

        </Preference>

        <Preference
            app:dependency="notificationSwitch"
            app:icon="@drawable/ic_baseline_notifications_remove_24"
            app:key="removeNotification"
            app:title="@string/remove_reminder"
            app:isPreferenceVisible="false"
            app:fragment="edu.weber.cs.w01113559.emojimoodtracker.Settings.RemoveReminderFragment" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/data">

        <Preference
            app:fragment="edu.weber.cs.w01113559.emojimoodtracker.Settings.DeleteDataDialog"
            app:icon="@drawable/ic_baseline_clear_24"
            app:key="clearData"
            app:title="Clear Data" />

    </PreferenceCategory>

    <PreferenceCategory app:title="About">
        <Preference
            app:key="sendFeedback"
            app:title="Send Feedback" />
        <Preference
            app:key="version"
            app:title="Build version"
            app:summary="1.2.345" />
    </PreferenceCategory>

</PreferenceScreen>